<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorListFragment"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/random_quotes"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:id="@+id/RandomQoutes"
        android:textStyle="bold"
        android:layout_gravity="center"

        android:layout_marginTop="20dp"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/or"
        android:textSize="15sp"
        android:id="@+id/OR"
        android:layout_gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RandomQoutes" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/SearchAuthorHead"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/OR"
        android:text="@string/h3"
        android:textAlignment="center"

        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchAuthorHead"
        android:id="@+id/container"


        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textveiw"
            android:text="@string/loading"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            />

    </FrameLayout>

</LinearLayout>

