<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RandomQuotesList"

    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight=".5"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="50dp"

            android:layout_height="match_parent"
            android:id="@+id/BackButton"
            android:padding="8dp"
            android:src="@drawable/back_arrow"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/my_quotes"
            android:textSize="30sp"
            android:layout_marginEnd="50dp"
            android:textAlignment="center"
            android:textStyle="italic"



            />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:id="@+id/ContainerRandomQuotes"
        android:layout_weight="7"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textveiw"
            android:text="@string/loading"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:background="#E6E4E4"
        android:layout_marginTop="5dp"
        android:elevation="5dp"

        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/prev"
            android:id="@+id/PrevBtn"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/black"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="20sp"
            android:id="@+id/NextButton"
            android:backgroundTint="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="150dp"

            />
    </LinearLayout>




</LinearLayout>