<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:clickable="true">

            <ImageView
                android:id="@+id/quoteImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/img"
                android:contentDescription="@string/quotes_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="vertical"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/quoteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_quote_text"
                    android:fontStyle="normal"
                    android:paddingBottom="8dp"/>

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/quoteAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-thin"
                    android:padding="4dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>